unpackaged/main/default/objects/GBS_Case_2nd_Type__c/GBS_Case_2nd_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GBS - Case 2nd Type</label>
</CustomObject>