unpackaged/main/default/objects/GBS_Case_2nd_Type__c/fields/Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority__c</fullName>
    <label>Customer Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>