unpackaged/main/default/objects/GBS_Case_2nd_Type__c/fields/Dependent_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Value__c</fullName>
    <label>Dependent Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>